fix layout issue in nav

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -15,6 +15,7 @@
 img {
   max-width: 100%;
   display: block;
+  object-fit: cover;
 }
 
 ul li {
@@ -33,7 +34,6 @@ body {
   line-height: 1.3;
 }
 body header #logo {
-  padding-block: 1rem;
   align-self: flex-start;
 }
 
@@ -49,7 +49,7 @@ body header #logo {
 
 header {
   justify-content: space-between;
-  padding-block: 1.3rem;
+  padding-block: 1.7rem;
 }
 
 main .hero-imgs .hero-imgs-desktop {
@@ -93,28 +93,31 @@ main .hero .hero__icons #audiophile {
   margin-inline-start: 1rem;
 }
 
+nav .open-menu {
+  margin-block-end: 0.5rem;
+}
 nav a:hover {
   color: hsl(0deg, 0%, 8%);
 }
-nav .links .nav-items {
+nav .nav-items {
   position: absolute;
   right: 0;
   top: 0;
   width: 65%;
   height: 100vh;
-  padding-inline: 1.5rem;
-  padding-block: 1rem;
+  padding-inline: 1.5rem 1rem;
+  padding-block: 1.5rem 1rem;
   background-color: hsl(0deg, 0%, 98%);
   box-shadow: 0 0 50rem hsl(0deg, 0%, 8%);
 }
-nav .links .nav-items .close-menu {
+nav .nav-items .close-menu {
   align-self: flex-end;
 }
-nav .links .nav-items .btn-register {
+nav .btn-register {
   border: 1px solid hsl(0deg, 0%, 41%);
   color: hsl(0deg, 0%, 41%);
 }
-nav .links .nav-items .btn-register:hover {
+nav .btn-register:hover {
   border: 1px solid hsl(0deg, 0%, 8%);
   color: hsl(0deg, 0%, 8%);
 }
@@ -175,10 +178,9 @@ nav .close-menu {
 nav .close-menu {
     display: none;
   }
-  nav .links {
+  nav .nav-items {
     justify-content: space-between;
-  }
-  nav .links .nav-items {
+    padding: 0;
     width: 100%;
     gap: 2rem;
     position: inherit;
@@ -188,12 +190,19 @@ nav .close-menu {
     background-color: none;
     box-shadow: none;
   }
-  nav .links .nav-items .dropdown-container {
+  nav .nav-items .links {
+    flex-direction: row;
+    gap: 3rem;
+  }
+  nav .nav-items .dropdown-container {
     position: relative;
   }
-  nav .links .nav-items .dropdown-container .dropdown {
+  nav .nav-items .dropdown-container:hover .dropdown {
+    display: flex;
+  }
+  nav .nav-items .dropdown-container .dropdown {
     position: absolute;
-    top: 2rem;
+    top: 1.3rem;
     right: 0.05rem;
     padding: 1rem 2rem;
     background-color: hsl(0deg, 0%, 98%);
@@ -203,6 +212,9 @@ nav .close-menu {
     -moz-border-radius: 0.5rem;
     -ms-border-radius: 0.5rem;
     -o-border-radius: 0.5rem;
+  }
+  nav .nav-items .dropdown-container .dropdown__item {
+    flex-basis: 100%;
   }
   nav .btns {
     flex-direction: row;
