--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -34,6 +34,7 @@ $lh-base: 1.3;
 img {
   max-width: 100%;
   display: block;
+  object-fit: cover;
 }
 
 ul li {
@@ -52,7 +53,7 @@ body {
   line-height: $lh-base;
   header {
     #logo {
-      padding-block: 1rem;
+      // padding-block: 1rem;
       align-self: flex-start;
     }
   }
