--- a/styles/scss/components/header/_header.scss
+++ b/styles/scss/components/header/_header.scss
@@ -1,4 +1,4 @@
 header {
   justify-content: space-between;
-  padding-block: 1.3rem;
+  padding-block: 1.7rem;
 }
