--- a/styles/scss/components/nav/_menu.scss
+++ b/styles/scss/components/nav/_menu.scss
@@ -1,32 +1,35 @@
 @use "../../base" as *;
 
 nav {
+  .open-menu {
+    margin-block-end: 0.5rem;
+  }
+
   a:hover {
     color: $clr-neutral-300;
   }
-  .links {
-    .nav-items {
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 65%;
-      height: 100vh;
-      padding-inline: 1.5rem;
-      padding-block: 1rem;
-      background-color: $clr-neutral-100;
-      box-shadow: 0 0 50rem $clr-neutral-300;
-      .close-menu {
-        align-self: flex-end;
-      }
 
-      .btn-register {
-        border: 1px solid $clr-neutral-200;
-        color: $clr-neutral-200;
-        &:hover {
-          border: 1px solid $clr-neutral-300;
-          color: $clr-neutral-300;
-        }
-      }
+  .nav-items {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 65%;
+    height: 100vh;
+    padding-inline: 1.5rem 1rem;
+    padding-block: 1.5rem 1rem;
+    background-color: $clr-neutral-100;
+    box-shadow: 0 0 50rem $clr-neutral-300;
+    .close-menu {
+      align-self: flex-end;
+    }
+  }
+
+  .btn-register {
+    border: 1px solid $clr-neutral-200;
+    color: $clr-neutral-200;
+    &:hover {
+      border: 1px solid $clr-neutral-300;
+      color: $clr-neutral-300;
     }
   }
 
